add code of conduct

--- a/README.Rmd
+++ b/README.Rmd
@@ -52,3 +52,5 @@ head(mba_sample)
 # modified data
 mbar_prep_data(mba_sample, InvoiceNo, Description)
 ```
+
+Please note that the 'mbar' project is released with a [Contributor Code of Conduct](CODE_OF_CONDUCT.md). By contributing to this project, you agree to abide by its terms.
